Code refactored - Grid layout added Css replaced by Bootstrap Css improved & refactored - Dynamic footer added FontAwesome images added Social bar service added via DI - Db moved from local to VDS (PostgreSQL)

--- a/Project 19.8/Views/Contacts/Details.cshtml
+++ b/Project 19.8/Views/Contacts/Details.cshtml
@@ -6,8 +6,7 @@
 }
 
 <div>
-    <hr />
-    <dl class="row">
+	<dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
@@ -47,8 +46,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">
+    <a asp-action="Edit" asp-route-id="@Model?.Id">
         <input type="submit" value="Edit" class="btn btn-primary" /></a>
     <a asp-action="Index">
-        <input type="submit" value="Back to book" class="btn btn-secondary" /></a>
+        <input type="submit" value="Back to book" class="btn btn-secondary" />
+    </a>
 </div>
