--- a/Project 19.8/Views/_ViewImports.cshtml
+++ b/Project 19.8/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Project_19._8
 @using Project_19._8.Models
+@using Project_19._8.Services
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
