--- a/Project 19.8/Views/Contacts/Edit.cshtml
+++ b/Project 19.8/Views/Contacts/Edit.cshtml
@@ -5,12 +5,11 @@
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
