--- a/Project 19.8/Views/Contacts/Delete.cshtml
+++ b/Project 19.8/Views/Contacts/Delete.cshtml
@@ -1,8 +1,8 @@
-﻿@model Contact
+﻿@model Project_19.Models.Contact
 
 @{
+	ViewData["Icss"] = "bi bi-person-fill-slash";
     ViewData["Title"] = "Delete contact";
-    Layout = "/Views/Shared/_Layout.cshtml";
 }
 
 <div>
@@ -43,9 +43,21 @@
 		<dd class = "col-sm-10">
 			@Html.DisplayFor(model => model.Description)
 		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.CreatedBy)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.CreatedBy)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.LastModifiedBy)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.LastModifiedBy)
+		</dd>
 	</dl>
     
-	<form asp-action="Delete">
+	<form asp-action="Delete" asp-antiforgery="true">
 		<input type="hidden" asp-for="Id" />
 		<input type="submit" value="Delete" class="btn btn-danger" />
 		<input type="button" value="Back to book" class="btn btn-secondary"
@@ -54,5 +66,5 @@
 </div>
 
 @section Title {
-	<h3>Are you sure?</h3>
+	<h3><i class="@ViewBag.Icss"></i> Are you sure?</h3>
 }
