--- a/Project 19.8/Views/Contacts/Details.cshtml
+++ b/Project 19.8/Views/Contacts/Details.cshtml
@@ -1,8 +1,8 @@
-﻿@model Contact
+﻿@model Project_19.Models.Contact
 
 @{
+    ViewData["Icss"] = "bi bi-person-fill";
     ViewData["Title"] = "Contact details";
-    Layout = "/Views/Shared/_Layout.cshtml";
 }
 
 <div>
@@ -40,15 +40,30 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Description)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.CreatedBy)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.CreatedBy)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.LastModifiedBy)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.LastModifiedBy)
+		</dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">
-        <input type="submit" value="Edit" class="btn btn-primary" /></a>
+    @if (User.IsInRole("admin"))
+    {
+	    <a asp-action="Edit" asp-route-id="@Model.Id">
+		    <input type="submit" value="Edit" class="btn btn-primary"/></a>
+    }
     <a asp-action="Index">
-        <input type="submit" value="Back to book" class="btn btn-secondary" />
-    </a>
+		<input type="submit" value="Back to book" class="btn btn-secondary"/>
+	</a>
 </div>
