--- a/Project 19.8/Views/Contacts/Edit.cshtml
+++ b/Project 19.8/Views/Contacts/Edit.cshtml
@@ -1,15 +1,20 @@
-﻿@model Contact
+﻿@model Project_19.Models.Contact
 
 @{
+    ViewData["Icss"] = "bi bi-person-lines-fill";
     ViewData["Title"] = "Edit contact";
-    Layout = "/Views/Shared/_Layout.cshtml";
+    var user = User.Identity?.Name ?? string.Empty;
 }
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+        <form asp-action="Edit" asp-antiforgery="true">
+	        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+	        <input type="hidden" asp-for="Id" />
+	        <input type="hidden" asp-for="CreatedBy"/>
+            <input type="hidden" asp-for="LastModifiedBy" value="@user" />
+
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
