--- a/Project 19.8/Views/Contacts/Index.cshtml
+++ b/Project 19.8/Views/Contacts/Index.cshtml
@@ -1,11 +1,12 @@
-﻿@model IEnumerable<Contact>
+﻿@model IEnumerable<Project_19.Models.Contact>
 
 @{
+	ViewData["Icss"] = "bi bi-person-plus";
     ViewData["Title"] = "Phonebook";
-    Layout = "/Views/Shared/_Layout.cshtml";
 }
 
 <table class="table table-striped table-bordered m-0 p-0">
+
 	<thead>
 	<tr>
 		<th>
@@ -20,17 +21,34 @@
 		<th>
 			@Html.DisplayNameFor(model => model.Patronymic)
 		</th>
-		<th class="w-25">
-			Actions
+		<th>
+			@Html.DisplayNameFor(model => model.CreatedBy)
 		</th>
+			@if (User.Identity is { IsAuthenticated: true })
+		{
+			<th class="w-25">
+				Actions
+			</th>
+		}
 	</tr>
 	</thead>
+
 	<tbody>
-	@foreach (var item in Model) {
+
+	@foreach (var item in Model)
+	{
 		<tr>
 			<td>
-				<a asp-action="Details" asp-route-id="@item.Id">
-					@Html.DisplayFor(modelItem => item.Id)</a>
+				@if (User.Identity is { IsAuthenticated: true })
+				{
+					<a asp-action="Details" asp-route-id="@item.Id">
+						@Html.DisplayFor(modelItem => item.Id)
+					</a>
+				}
+				else
+				{
+					@Html.DisplayFor(modelItem => item.Id)
+				}
 			</td>
 			<td>
 				@Html.DisplayFor(modelItem => item.LastName)
@@ -41,22 +59,29 @@
 			<td>
 				@Html.DisplayFor(modelItem => item.Patronymic)
 			</td>
-				<td>
-					<a asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil"></i></a>
-					<a asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-info-circle text-secondary"></i></a>
-					<a asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash3 text-danger"></i></a>
+			<td>
+				@Html.DisplayFor(modelItem => item.CreatedBy)
 			</td>
+			@if (User.Identity is { IsAuthenticated: true })
+			{
+				<td>
+					<a asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-info-circle text-secondary"></i></a>
+						@if (User.IsInRole("admin"))
+					{
+						<a asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil"></i></a>
+						<a asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash3 text-danger"></i></a>
+					}
+				</td>
+			}
 		</tr>
 	}
 	</tbody>
 </table>
 
 @section Title {
-	<p>
-		<a asp-action="Create">
-			<input class="btn btn-primary"
-			       value="Add contact"
-			       type="submit"/>
-		</a>
-	</p>
+	@if (User.Identity is { IsAuthenticated: true })
+	{
+		<p><button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Create")'">
+			<i class="@ViewBag.Icss"></i> Add contact</button></p>
+	}
 }
